    - disable NLS support if intltool is not found;
    - include PolicyKit files as part of distribution;
 * bugfix:
    - fix open syslog stdout socket on execute;
    - fix properly label created device nodes;
    - fix escape instance names in getty-generator;
    - fix search_and_fopen with alternate roots;
    - fix cycle break attempts outside transaction;
 * remove bootctl program;
 * remove git mailmap file;
 * remove .dir-locals.el file;
 * sort gitignore;
 * stop warning about unknown kernel cmdline options in fsck;
 * stop warning about unknown kernel cmdline options in quotacheck;

   systemd (214.6)
~~~~~~~
 * core:
    - use /dev/null as output if incorrect value is set;
    - use /dev/null as input if incorrect value is set;
    - don't use /dev/kmsg as output;
    - redirect stdout to terminal by default;
    - remove EXEC_OUTPUT_SYSLOG_AND_CONSOLE type output;
    - remove EXEC_OUTPUT_JOURNAL_AND_CONSOLE type output;
    - redirect stdout to syslog if type output is syslog or journal;
    - reset signal mask on re-exec to init;
    - conditionalize kmod setup on CAP_SYS_MODULE, not whether we run in a container;
 * units:
    - introduce new DefaultInstance= field for [Install] sections;
    - remove RefuseManualStart from units which are always around;
    - local-fs.target - don't pull in default dependencies;
    - remove systemd-bus-proxyd socket and service;
 * kdbus:
    - remove sd_bus_open_system_remote function;
 * busctl:
    - remove host argument option;
 * systemctl:
    - add preset-all command;
    - remove host argument option;
 * loginctl:
    - remove host argument option;
 * systemd-analyze:
    - remove host argument option;
 * systemd-run:
    - remove host argument option;
 * tmpfiles:
 	- add "L+" command;
 * tests:
    - add test-socket-util;
    - add test-fdset;
    - add tests to test-hashmap;
    - unlink temp file used in test-util;
 * tools:
    - remove check-includes perl script;
 * bugfix: