@@ -1,37 +1,0 @@
-/*-*- Mode: C; c-basic-offset: 8; indent-tabs-mode: nil -*-*/
-
-/***
-  This file is part of systemd.
-
-  Copyright 2010 Lennart Poettering
-
-  systemd is free software; you can redistribute it and/or modify it
-  under the terms of the GNU Lesser General Public License as published by
-  the Free Software Foundation; either version 2.1 of the License, or
-  (at your option) any later version.
-
-  systemd is distributed in the hope that it will be useful, but
-  WITHOUT ANY WARRANTY; without even the implied warranty of
-  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
-  Lesser General Public License for more details.
-
-  You should have received a copy of the GNU Lesser General Public License
-  along with systemd; If not, see <http://www.gnu.org/licenses/>.
-***/
-
-#include "util.h"
-
-int main(int argc, char *argv[]) {
-        int r;
-
-        /* This is mostly intended to be used for scripts which want
-         * to detect whether AC power is plugged in or not. */
-
-        r = on_ac_power();
-        if (r < 0) {
-                log_error("Failed to read AC status: %s", strerror(-r));
-                return EXIT_FAILURE;
-        }
-
-        return r != 0 ? EXIT_SUCCESS : EXIT_FAILURE;
-}
